tweaking compile settings, getting all code to compile and build, fixing bugs